# oscar-opkgc

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  RELEASE  autogen.sh  build.cfg  build_deb.sh  build_rpm.sh  clean.sh  configure.ac  opkgc.spec
conf/: Makefile.in  opkgc.conf.in
debian/: changelog  control  copyright  docs  rules
doc/: Makefile.in  css.xslt  db.css  opkg.5.html  opkg.5.xml  opkg.old.xsd  opkg.xsd  opkgc-manual.xml  opkgc.1.html  opkgc.1.xml
doc/samples/: config.xml
doc/samples/scripts/: api-post-install  api-post-uninstall  api-pre-install  api-pre-uninstall  client-post-install  client-post-uninstall  client-pre-install  client-pre-uninstall  server-post-install  server-post-uninstall  server-pre-install  server-pre-uninstall
src/: Makefile.in  opkg-convert  opkgc  opkgc.conf  setup.py.in
src/Opkgc/: Compiler.py  Config.py  Deb.py  OpkgDescription.py  OpkgcCompiler.py  OpkgcConfig.py  OpkgcLogger.py  OpkgcTools.py  OpkgcXml.py  PkgDescription.py  Rpm.py  Tools.py  XmlTools.py
src/OpkgcLib/: Compiler.py  Config.py  Deb.py  Logger.py  Makefile.py  OpkgDescription.py  PkgDescription.py  Rpm.py  Tools.py  XmlTools.py
templates/: Makefile.in  Makefile.tmpl
templates/debian/: README.debian.tmpl  changelog.tmpl  control.tmpl  copyright.tmpl  rules  rules.in
templates/rpm/: opkg.spec.tmpl  opkg.spec.xsl
test/: test-xslproc.py
test/opkg/: config.old.xml  config.xml
test/xslt/: example1.xsl
